--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -4,9 +4,9 @@
 
 <div class="mw7 center ph3 pt4">
 
-  {{ partial "media-block" (dict "heading" "Shade-grown coffee" "text" "Coffee is a small tree or shrub that grows in the forest understory in its wild form, and traditionally was grown commercially under other trees that provided shade. The forest-like structure of shade coffee farms provides habitat for a great number of migratory and resident species." "imageUrl" "/img/about/shade-grown.jpg") }}
+  {{ partial "media-block" (dict "heading" "Network Managment" "text" "Our associates have decades of experience designing and maintainign networks of all sizes.  It takes experience to balance cost and performance.  Let us use our expertise to develop a comprehensive plan for your local and cloud based systems." "imageUrl" "/img/about/secure-hand.png") }}
 
-  {{ partial "media-block-reverse" (dict "heading" "Single origin" "text" "Single-origin coffee is coffee grown within a single known geographic origin. Sometimes, this is a single farm or a specific collection of beans from a single country. The name of the coffee is then usually the place it was grown to whatever degree available." "imageUrl" "/img/about/single-origin.jpg") }}
+  {{ partial "media-block-reverse" (dict "heading" "Security Assesments" "text" "We understand network and data security.  We believe the safest approach for most businesses is to have a professional install and maintain your network and data.  If you want true piece of mind let us audit your system to ensure that the systems and procedures you implement are working." "imageUrl" "/img/about/girl-login.png") }}
 
 </div>
 
