--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
+<nav class="flex flex-wrap justify-between items-center center bg-white divider-grey relative">
 
 	<!-- Logo -->
 	<a href="/" class="pa1 db mr3 h-100 flex-none">
@@ -6,7 +6,7 @@
 	</a>
 
 	<!-- Primary Nav -->
-	<ul class="flex b list ma0">
+	<ul class="flex flex-wrap b list ma0">
 		<li><a href="/services" class="grey-3 pa3 no-underline db">Services</a></li>
 
 		<li><a href="/about" class="grey-3 pa3 no-underline db">About</a></li>
